fix button alignment, tweak broadcast

--- a/app/styles/app/layouts/broadcasts.sass
+++ b/app/styles/app/layouts/broadcasts.sass
@@ -134,8 +134,8 @@
 
 @keyframes pulsating-right
   40%
-    transform: translateX(20%) scale(1.1)
+    transform: translateX(1px) scale(1.1)
 
 @keyframes pulsating-left
   40%
-    transform: translateX(-20%) scale(1.1)
+    transform: translateX(-1px) scale(1.1)
