--- a/app/styles/app/layouts/buildheader.sass
+++ b/app/styles/app/layouts/buildheader.sass
@@ -124,19 +124,22 @@
   a
     display: block
     margin-bottom: .5em
-    text-align: center
     background-color: $grey-lighter
+    line-height: 24px
     &:hover
       background-color: darken($grey-medium, 10)
   .icon--trigger
     width: .95em
-    height: 1.2em
+    height: 1.3em
+    margin-left: 6px
   .icon--cancel
     width: 1em
     height: 1em
+    margin-left: 6px
   .icon--codeclimate
     width: 1.2em
     height: 1.1em
+    margin-left: 4px
 
 .build-os.linux
   text-transform: capitalize
