--- a/app/styles/app/modules/buttons.sass
+++ b/app/styles/app/modules/buttons.sass
@@ -123,8 +123,8 @@ $button-border-color: #d4d4d4
     background-color: #696867
 
 .button-circle
-  width: 1.7em
-  height: 1.7em
+  width: 28px
+  height: 28px
   border-radius: 50%
 
 .button--showmore
